@@ -3,10 +3,15 @@ package com.example.budget.dao.account;
 import com.example.budget.model.Account;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.jdbc.core.JdbcTemplate;
+import org.springframework.jdbc.core.PreparedStatementCreator;
+import org.springframework.jdbc.support.GeneratedKeyHolder;
+import org.springframework.jdbc.support.KeyHolder;
 import org.springframework.stereotype.Repository;
 
-import java.math.BigInteger;
+import java.math.BigDecimal;
+import java.sql.*;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 
 @Repository("postgres_accounts")
@@ -25,18 +30,51 @@ public class AccountDataAccessService implements AccountDao {
     }
 
     @Override
-    public int addAccount(int userId, Account account) {
-        final String sql = "INSERT INTO accounts (user_id, name, description, created_at, amount, currency_id) VALUES (?, ?, ?, ?, ?, ?)";
+    public Account addAccount(int userId, Account account) {
+        final String sql = "INSERT INTO accounts (" +
+                "user_id," +
+                "name," +
+                "description," +
+                "created_at," +
+                "amount," +
+                "currency_id" +
+                ") VALUES (?, ?, ?, ?, ?, ?)";
 
-        return jdbcTemplate.update(
-                sql,
-                userId,
-                account.getName(),
-                account.getDescription(),
-                account.getCreatedAt(),
-                account.getAmount(),
-                account.getCurrencyId()
-        );
+        KeyHolder keyHolder = new GeneratedKeyHolder();
+
+
+        int result = jdbcTemplate.update(
+                new PreparedStatementCreator() {
+                    @Override
+                    public PreparedStatement createPreparedStatement(Connection connection) throws SQLException {
+                        PreparedStatement preparedStatement = connection.prepareStatement(sql, PreparedStatement.RETURN_GENERATED_KEYS);
+
+                        preparedStatement.setInt(1, userId);
+                        preparedStatement.setString(2, account.getName());
+                        preparedStatement.setString(3, account.getDescription());
+                        preparedStatement.setTimestamp(4, account.getCreatedAt());
+                        preparedStatement.setLong(5, account.getAmount());
+                        preparedStatement.setInt(6, account.getCurrencyId());
+
+                        return preparedStatement;
+                    }
+                }, keyHolder);
+
+        if (result > 0) {
+            Map<String, Object> keys = keyHolder.getKeys();
+
+            return new Account(
+                    (int) keys.get("id"),
+                    (int) keys.get("user_id"),
+                    (String) keys.get("name"),
+                    (String) keys.get("description"),
+                    (int) keys.get("currency_id"),
+                    (Timestamp) keys.get("created_at"),
+                    (long) keys.get("amount")
+            );
+        }
+
+        return null;
     }
 
     @Override
@@ -50,8 +88,8 @@ public class AccountDataAccessService implements AccountDao {
                     result.getString("name"),
                     result.getString("description"),
                     result.getInt("currency_id"),
-                    result.getDate("created_at"),
-                    new BigInteger(Integer.valueOf(result.getInt("amount")).toString())
+                    result.getTimestamp("created_at"),
+                    new Long(Integer.valueOf(result.getInt("amount")).toString())
             );
         });
     }
@@ -70,8 +108,8 @@ public class AccountDataAccessService implements AccountDao {
                             result.getString("name"),
                             result.getString("description"),
                             result.getInt("currency_id"),
-                            result.getDate("created_at"),
-                            new BigInteger(Integer.valueOf(result.getInt("amount")).toString())
+                            result.getTimestamp("created_at"),
+                            result.getLong("amount")
                     );
                 }
         );
